--- a/landingPage/src/app/contact/contact.component.html
+++ b/landingPage/src/app/contact/contact.component.html
@@ -1,16 +1,12 @@
 <section id="contact" class="contact section">
-
     <div class="container section-title" data-aos="fade-up">
-        <h2>Contact Us</h2>
-        <p>For any inquiries or to schedule a consultation, please reach out to us.</p>
+        <h2 class="contact-title">Contact Us</h2>
+        <p class="contact-paragraph">For any inquiries or to schedule a consultation, please reach out to us.</p>
     </div>
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row gy-4">
-
             <div class="col-lg-6">
-
                 <div class="row gy-4">
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="200">
@@ -28,16 +24,15 @@
                             <p class="phoneNumber"><a href="tel:+201097597536">+20 109 759 7536</a></p>
                             <p class="phoneNumber"><a href="tel:+201203554163">+20 120 355 4163</a></p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="400">
                             <i class="fas fa-envelope"></i>
                             <h3>Email Us</h3>
                             <p>contact&#64;shadyragaay.com</p>
-                            <!-- <p>support&#64;lawfirm.com</p> -->
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="500">
@@ -46,34 +41,27 @@
                             <p>Monday - Friday</p>
                             <p>9:00 AM - 5:00 PM</p>
                         </div>
-                    </div><!-- End Info Item -->
-
+                    </div>
                 </div>
-
             </div>
 
             <div class="col-lg-6">
                 <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
                     data-aos-delay="200">
                     <div class="row gy-4">
-
                         <div class="col-md-6">
                             <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
                         </div>
-
                         <div class="col-md-6 ">
                             <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
                         </div>
-
                         <div class="col-12">
                             <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
                         </div>
-
                         <div class="col-12">
                             <textarea class="form-control" name="message" rows="6" placeholder="Message"
                                 required=""></textarea>
                         </div>
-
                         <div class="col-12 text-center">
                             <div *ngIf="isLoading" class="loading">Loading...</div>
                             <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
@@ -84,9 +72,6 @@
                     </div>
                 </form>
             </div>
-
         </div>
-
     </div>
-
 </section>
