--- a/frontend/src/app/components/lawyers/lawyers/lawyers.component.html
+++ b/frontend/src/app/components/lawyers/lawyers/lawyers.component.html
@@ -14,6 +14,7 @@
     [onFormSubmit]="submitForm"
     (backdropClicked)="toggleFormVisibility()"
     (inputChanged)="checkChangedInput($event)"
+    [form]="form"
   ></app-adding-form>
 
   <app-table
