sidebar style + adjusting validation functions

--- a/frontend/src/app/components/cases/cases-list/cases.component.html
+++ b/frontend/src/app/components/cases/cases-list/cases.component.html
@@ -97,7 +97,7 @@
     </tr>
     }
   </app-table>
-  <div #paginatorContainer class="d-flex paginator-container">
+  <div #paginatorContainer class="paginator-container">
     <mat-paginator
       [length]="cases?.length"
       [pageSize]="5"
