--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,6 +12,10 @@ body {
   background: url(./assets/body-bg.jpg);
 }
 
+.sidebar-zindex {
+  z-index: 999999999999;
+}
+
 .table td:not(:first-child) {
   min-width: 200px;
 }
@@ -23,4 +27,8 @@ td:first-child {
 
 .cdk-overlay-container {
   display: none;
+}
+
+.mat-mdc-paginator-container {
+  justify-content: center !important;
 }
