--- a/frontend/src/app/components/todo-list/todo-list.component.css
+++ b/frontend/src/app/components/todo-list/todo-list.component.css
@@ -1,4 +1,4 @@
-main {
+.main {
   width: 90%;
   max-width: 60rem;
   min-height: 50vh;
@@ -32,7 +32,7 @@ p {
 }
 
 @media (min-width: 768px) {
-  main {
+  .main {
     margin: 4rem auto;
     grid-template-columns: 1fr 3fr;
   }
