--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -15,6 +15,7 @@
         type="email"
         id="email"
         name="email"
+        required
         placeholder="contact@email.com"
         [(ngModel)]="enteredEmail"
         required
@@ -25,6 +26,7 @@
       </div>
       <label for="password">Password</label>
       <input
+        required
         type="password"
         id="password"
         name="password"
@@ -69,3 +71,10 @@
     </div>
   </div>
 </div>
+
+<app-otp-verification
+  *ngIf="otpFormStatus"
+  [enteredEmail]="enteredEmail"
+  [enteredPassword]="enteredPassword"
+  (close)="closeOtpForm()"
+></app-otp-verification>
