--- a/frontend/src/app/shared/adding-form/adding-form.component.html
+++ b/frontend/src/app/shared/adding-form/adding-form.component.html
@@ -1,6 +1,6 @@
 <div class="backdrop" (click)="closeForm()"></div>
 <div class="form-box">
-  <h2>{{ formHeader }}</h2>
+  <h2 class="mb-2">{{ formHeader }}</h2>
   <form class="px-3 pb-3">
     <div class="form-inputs">
       @for (item of formInputRows; track $index) {
