--- a/frontend/src/app/components/cases/cases-list/cases.component.css
+++ b/frontend/src/app/components/cases/cases-list/cases.component.css
@@ -3,6 +3,11 @@ th {
   vertical-align: middle;
 }
 
+td:not(:first-child) {
+  color: var(--textTablecolor);
+  font-weight: bold;
+}
+
 .custom-select {
   position: relative;
   display: inline-block;
@@ -52,6 +57,10 @@ select option {
 
 .me-5 {
   flex: auto;
+}
+
+.court-info {
+  color: var(--mainTextColor);
 }
 
 .justify-content-center {
