--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.html
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.html
@@ -11,6 +11,9 @@
       id="{{ input_Info.backed_key }}"
       [formControlName]="input_Info.backed_key"
       (change)="emmitNewValue($event)"
+      [ngClass]="{
+        'placeholder-option': !form.get(input_Info.backed_key)?.value
+      }"
     >
       <option value="">Please Select {{ input_Info.title }}</option>
       <option *ngFor="let option of input_Info.options" [value]="option.id">
