--- a/frontend/src/app/components/cases/cases-list/cases.component.css
+++ b/frontend/src/app/components/cases/cases-list/cases.component.css
@@ -3,6 +3,10 @@ th {
   vertical-align: middle;
 }
 
+th {
+  background-color: var(--mainColor);
+}
+
 td:not(:first-child) {
   color: var(--textTablecolor);
   font-weight: bold;
@@ -17,13 +21,13 @@ td:not(:first-child) {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-color: transparent;
+  background-color: var(--mainColor);
   padding: 5px 20px;
   border-radius: 40px;
   outline: none;
-  color: var(--textTablecolor);
+  color: white;
   cursor: pointer;
-  border: 1px solid #7f32fd;
+  border: 2px solid var(--mainColor);
   transition: 0.2s ease-in-out;
 }
 
@@ -33,6 +37,7 @@ td:not(:first-child) {
   top: 50%;
   transform: translateY(-50%);
   pointer-events: none; /* Prevent the icon from being clickable */
+  color: white !important;
 }
 
 select:hover,
@@ -52,7 +57,8 @@ select:hover .custom-select i {
 }
 
 select option {
-  color: black;
+  color: white;
+  cursor: pointer;
 }
 
 .me-5 {
@@ -60,7 +66,7 @@ select option {
 }
 
 .court-info {
-  color: var(--mainTextColor);
+  color: white;
 }
 
 .justify-content-center {
@@ -73,6 +79,11 @@ select option {
   justify-content: center;
   margin-top: 10px;
   width: 100%;
-  background-color: white;
+  background-color: var(--mainColor);
   border-radius: 4px;
+  color: white;
+}
+
+span {
+  color: var(--textTablecolor);
 }
