--- a/frontend/src/app/shared/secondary-nav/secondary-nav.component.css
+++ b/frontend/src/app/shared/secondary-nav/secondary-nav.component.css
@@ -14,21 +14,11 @@ nav {
 }
 
 h3 {
-  color: var(--mainTextColor);
+  color: var(--mainColor);
 }
 
 button {
-  background: rgb(247, 0, 190);
-  background: linear-gradient(
-    151deg,
-    rgba(247, 0, 190, 1) 1%,
-    rgba(228, 8, 200, 1) 17%,
-    rgba(223, 10, 203, 1) 21%,
-    rgba(212, 15, 209, 1) 30%,
-    rgba(198, 21, 216, 1) 42%,
-    rgba(180, 28, 226, 1) 57%,
-    rgba(128, 50, 253, 1) 100%
-  );
+  background-color: var(--mainColor);
   padding: 5px 15px;
   border-radius: 40px;
   border: none;
