bug fix on update case + adding form color change + fix dashboard route + enhancing colors

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -24,6 +24,12 @@
   width: 280px;
 }
 
+.navbar {
+  width: 100%;
+  background-color: var(--secondaryColor);
+  height: 80px;
+}
+
 @media (max-width: 768px) {
   .sidebar {
     transform: translateX(-100%);
