--- a/frontend/src/app/shared/adding-form/adding-form.component.html
+++ b/frontend/src/app/shared/adding-form/adding-form.component.html
@@ -16,7 +16,8 @@
         Cancel
       </button>
       <button
-        class="btn w-25 btn-primary p-1"
+        class="btn w-25 p-1"
+        style="background-color: var(--mainColor); color: white"
         type="button"
         (click)="submitForm()"
       >
