--- a/frontend/src/app/shared/sidebar/sidebar.component.css
+++ b/frontend/src/app/shared/sidebar/sidebar.component.css
@@ -22,7 +22,7 @@
 }
 
 .mainSide {
-  border-right: 1px solid var(--mainTextColor);
+  border-right: 1px solid var(--mainColor);
 }
 
 .drop-container {
