--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   [class.sidebar-open]="isSidebarOpen"
 >
   <div
-    class="sidebar d-flex flex-column flex-shrink-0 text-white bg-black"
+    class="sidebar d-flex flex-column flex-shrink-0 text-white bg-rgb(237 237 237)"
     [class.active]="isSidebarOpen"
   >
     <a
